Add integration and unit tests for code generator
- Implement `codegen-run.js` to execute generated snippets across multiple languages, verifying HTTP responses and session handling.
- Create `codegen-test.js` to validate the structure of generated code, ensuring no deprecated endpoints are referenced and that the 3-step flow is maintained.
- Include checks for Java compilation and structure validation for various Java snippets.