@@ -1,127 +1,82 @@
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
-
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-{{#if HAS_BODY}}
-import java.io.OutputStream;
-{{/if}}
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Base64;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
+
 public class InSignApiCall {
-    private static final String BASE_URL = "{{BASE_URL}}";
-    private static final String AUTH_ENCODED = Base64.getEncoder().encodeToString(
-        "{{USERNAME}}:{{PASSWORD}}".getBytes(StandardCharsets.UTF_8));
+    static final String BASE = "{{BASE_URL}}";
+    static final String AUTH = "Basic " + Base64.getEncoder()
+        .encodeToString("{{USERNAME}}:{{PASSWORD}}".getBytes(UTF_8));
+    static final HttpClient http = HttpClient.newHttpClient();
+    static final ObjectMapper mapper = new ObjectMapper();
 
     public static void main(String[] args) throws Exception {
-        ObjectMapper mapper = new ObjectMapper();
-
 {{#if HAS_BODY}}
         // Build request body
 {{BODY_BUILD}}
+{{SAMPLES}}
 
-        String jsonBody = mapper.writerWithDefaultPrettyPrinter().writeValueAsString(body);
-
+{{FILE_COMMENT}}
 {{/if}}
-        // HTTP connection
-        URL url = new URL("{{URL}}");
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("{{METHOD}}");
-        conn.setRequestProperty("Authorization", "Basic " + AUTH_ENCODED);
+        // 1) {{METHOD}} {{PATH}}
+        var req = HttpRequest.newBuilder(URI.create("{{URL}}"))
+            .header("Authorization", AUTH)
 {{#if HAS_BODY}}
-        conn.setRequestProperty("Content-Type", "{{CONTENT_TYPE}}");
-        conn.setDoOutput(true);
-
-        try (OutputStream os = conn.getOutputStream()) {
-            os.write(jsonBody.getBytes(StandardCharsets.UTF_8));
-        }
+            .header("Content-Type", "{{CONTENT_TYPE}}")
+            .{{METHOD}}(HttpRequest.BodyPublishers.ofString(mapper.writeValueAsString(body)))
 {{/if}}
+{{#unless HAS_BODY}}
+            .{{METHOD}}()
+{{/unless}}
+            .build();
+        var res = http.send(req, HttpResponse.BodyHandlers.ofString());
+        System.out.println("HTTP " + res.statusCode());
+        System.out.println(res.body());
+        if (res.statusCode() != 200) {
+            System.err.println("FAILED: expected HTTP 200, got " + res.statusCode());
+            System.exit(1);
+        }
+        var json = mapper.readTree(res.body());
 
-        int status = conn.getResponseCode();
-        System.out.println("HTTP Status: " + status);
+        // 2) Get status
+        String sid = json.path("sessionid").asText(null);
+        if (sid != null) {
+            var r2 = post("/get/status?sessionid=" + sid);
+            System.out.println("\n=== Status (HTTP " + r2.statusCode() + ") ===");
+            System.out.println(r2.body());
+            if (r2.statusCode() != 200) {
+                System.err.println("FAILED: get/status returned HTTP " + r2.statusCode());
+                System.exit(1);
+            }
+            var status = mapper.readTree(r2.body());
 
-        BufferedReader reader = new BufferedReader(
-            new InputStreamReader(
-                status >= 400 ? conn.getErrorStream() : conn.getInputStream(),
-                StandardCharsets.UTF_8));
-        StringBuilder response = new StringBuilder();
-        String line;
-        while ((line = reader.readLine()) != null) response.append(line);
-        reader.close();
-
-        // Parse response JSON
-        var json = mapper.readTree(response.toString());
-        System.out.println(mapper.writerWithDefaultPrettyPrinter().writeValueAsString(json));
-
-        // Extract sessionid from response
-        String sessionId = json.has("sessionid") ? json.get("sessionid").asText() : null;
-        if (sessionId != null) {
-            getStatus(mapper, sessionId);
-            downloadDocument(mapper, sessionId);
+            // 3) Download document (first doc)
+            String docId = status.at("/documentData/0/docid").asText("0");
+            var r3 = http.send(HttpRequest.newBuilder(URI.create(BASE + "/get/document?sessionid=" + sid + "&docid=" + docId))
+                .header("Authorization", AUTH).POST(HttpRequest.BodyPublishers.noBody()).build(),
+                HttpResponse.BodyHandlers.ofByteArray());
+            System.out.println("\n=== Download (HTTP " + r3.statusCode() + ") ===");
+            if (r3.statusCode() == 200) {
+                Files.write(Path.of("document.pdf"), r3.body());
+                System.out.println("Saved document.pdf (" + r3.body().length + " bytes)");
+            } else {
+                System.err.println("Download failed: " + new String(r3.body(), UTF_8));
+                System.exit(1);
+            }
         }
     }
 
-    /** Check session status — prints completion flag and signature counts */
-    static void getStatus(ObjectMapper mapper, String sessionId) throws Exception {
-        ObjectNode body = mapper.createObjectNode();
-        body.put("sessionid", sessionId);
-
-        URL url = new URL(BASE_URL + "/get/status");
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("POST");
-        conn.setRequestProperty("Authorization", "Basic " + AUTH_ENCODED);
-        conn.setRequestProperty("Content-Type", "application/json");
-        conn.setDoOutput(true);
-        try (OutputStream os = conn.getOutputStream()) {
-            os.write(mapper.writeValueAsBytes(body));
-        }
-
-        BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8));
-        StringBuilder sb = new StringBuilder();
-        String line;
-        while ((line = reader.readLine()) != null) sb.append(line);
-        reader.close();
-
-        var status = mapper.readTree(sb.toString());
-        System.out.println("\n=== Session Status ===");
-        System.out.println("Successfully completed: " + status.path("successfullycompleted").asBoolean());
-        System.out.println("Signatures done: " + status.path("numberofsignaturesdone").asInt());
-        System.out.println("Signatures missing: " + status.path("numberofsignaturesmissing").asInt());
-    }
-
-    /** Download signed document(s) and save to disk */
-    static void downloadDocument(ObjectMapper mapper, String sessionId) throws Exception {
-        ObjectNode body = mapper.createObjectNode();
-        body.put("sessionid", sessionId);
-
-        URL url = new URL(BASE_URL + "/get/documents/download");
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("POST");
-        conn.setRequestProperty("Authorization", "Basic " + AUTH_ENCODED);
-        conn.setRequestProperty("Content-Type", "application/json");
-        conn.setRequestProperty("Accept", "*/*");
-        conn.setDoOutput(true);
-        try (OutputStream os = conn.getOutputStream()) {
-            os.write(mapper.writeValueAsBytes(body));
-        }
-
-        if (conn.getResponseCode() == 200) {
-            String fileName = "signed-document.pdf";
-            String cd = conn.getHeaderField("Content-Disposition");
-            if (cd != null && cd.contains("filename=")) {
-                fileName = cd.split("filename=")[1].replace("\"", "").trim();
-            }
-            try (var is = conn.getInputStream();
-                 var fos = new java.io.FileOutputStream(fileName)) {
-                is.transferTo(fos);
-            }
-            System.out.println("\nDocument saved to: " + fileName);
-        } else {
-            System.err.println("Download failed: HTTP " + conn.getResponseCode());
-        }
+    static HttpResponse<String> post(String path) throws Exception {
+        return http.send(HttpRequest.newBuilder(URI.create(BASE + path))
+            .header("Authorization", AUTH).POST(HttpRequest.BodyPublishers.noBody()).build(),
+            HttpResponse.BodyHandlers.ofString());
     }
 }
